# wilma

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_ISSUES.md  GITHUB_ISSUES_ARCHIVED.md  ISSUE_STATUS.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  demo_rich_ui.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql.yml  publish.yml  scorecard.yml  test.yml
scripts/: demo_setup.py
src/wilma/: __init__.py  __main__.py  api.py  assessment.py  audit.py  checker.py  config.py  enums.py  exceptions.py  reports.py  utils.py
src/wilma/checks/: __init__.py  agents.py  fine_tuning.py  genai.py  guardrails.py  iam.py  knowledge_bases.py  logging.py  network.py  tagging.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_agent_checks.py  test_api.py  test_assessment.py  test_audit.py  test_demo_setup.py  test_fine_tuning_checks.py  test_genai_checks.py  test_guardrails_checks.py  test_iam_checks.py  test_kb_checks.py  test_logging_checks.py  test_network_checks.py  test_reports.py  test_tagging_checks.py  test_utils.py
tests/contract/: __init__.py  test_aws_api_contracts.py
tests/integration/: __init__.py
tests/unit/: __init__.py
wiki_content/: GenAI-Security-Fundamentals.md  Home.md  Installation-Guide.md  Knowledge-Bases-RAG-Security.md  OWASP-LLM-Top-10.md  README.md
