[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wilma-sec"
version = "0.2.1"
description = "Wilma - AWS Bedrock Security Posture Assessment"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
    {name = "Ethan Troy"},
]
keywords = ["aws", "bedrock", "security", "genai", "ai", "ml", "audit", "compliance", "wilma"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "boto3>=1.43.51,<2.0.0",
    "botocore>=1.42.97,<2.0.0",
    "rich>=15.0.0,<16.0.0",
    "pyyaml>=6.0.3,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/ethanolivertroy/wilma"
"Bug Tracker" = "https://github.com/ethanolivertroy/wilma/issues"
Documentation = "https://github.com/ethanolivertroy/wilma#readme"

[project.scripts]
wilma = "wilma.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "moto>=5.0.0",
    "ruff>=0.15.13",
    "bandit[toml]>=1.8.6",
    "mypy>=1.19.1,<2.0.0",
    "boto3-stubs[bedrock]>=1.34.0",
    "types-PyYAML>=6.0.0",
    "build>=1.4.4",
    "twine>=6.2.0",
    "tomli>=2.0.0; python_version<'3.11'",  # For reading pyproject.toml in publish workflow
]

# Ruff configuration - Fast Python linter
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # Allow lines longer than 120 (many are unavoidable in AWS API calls)
    "S101",  # Allow assert statements in tests
    "S104",  # Allow binding to all interfaces
    "S106",  # Allow hardcoded password false positives in tests
    "S107",  # Allow hardcoded password in default function arguments
    "S108",  # Allow hardcoded temp directories
    "S112",  # Allow try-except-continue (acceptable in check modules)
    "UP006", # Defer built-in generic migration across existing typed modules
    "UP035", # Defer typing.List/Dict import migration across existing typed modules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # Allow asserts and hardcoded passwords in tests

# Bandit configuration - Security linter
[tool.bandit]
exclude_dirs = ["tests", "demos", ".venv", "venv"]
skips = [
    "B101",  # assert_used (tests need asserts)
    "B601",  # shell_injection in specific contexts
    "B106",  # hardcoded_password_funcarg (false positives on AWS pagination tokens)
    "B107",  # hardcoded_password_default (false positives on AWS pagination defaults)
    "B112",  # try_except_continue (acceptable pattern in check modules)
]

# MyPy configuration - Type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once types are added
ignore_missing_imports = true
exclude = [
    "tests/",
    "demos/",
    "build/",
    "dist/",
]
